# CourseraPreparation

./: README.md  staticCheker.py
CPPRelatedStuff/Clang/: Parsed.cpp
CPPRelatedStuff/TestProjects/mplayer/.svn/: entries
CPPRelatedStuff/TestProjects/mplayer/DOCS/.svn/: entries
CPPRelatedStuff/TestProjects/mplayer/drivers/.svn/: entries
CPPRelatedStuff/TestProjects/mplayer/libmpcodecs/.svn/: entries
CPPStyleChecking/mplayer/TOOLS/.svn/: entries
CPPStyleChecking/mplayer/input/.svn/: entries
CPPStyleChecking/mplayer/libmpdemux/.svn/: entries
Java/: Grade.py
Java/src/submitted/: Add.java  Add.java~  Multiply.java  Subtract.java
Java/src/tests/: SubtractTest.java
JavaRelatedStuff/JavaSamples/: SampleTest.java
JavaStyleChecking/: staticCheker-Java-pmd.py
JavaStyleChecking/code/src/: Divide.java  Subtract.java  sample.java
JavaStyleChecking/code/tests/: AddTest.java  DivideTest.java  MultiplyTest.java
JavaStyleChecking/pmd/pmd-src-5.0.4/src/site/: site.xml
OldStuff/CPPRelatedStuff/: styleChecker.py
OldStuff/CPPRelatedStuff/Clang/: Persion.cpp  syntax-check  syntax-check.cpp
OldStuff/CPPRelatedStuff/students-samples/.svn/: all-wcprops  entries
OldStuff/CPPRelatedStuff/students-samples/grp-38556421/: FicheCorrectionA.txt  saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-38556421/.svn/: all-wcprops  entries
OldStuff/CPPRelatedStuff/students-samples/grp-3a7ad301/: saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-3a7ad301/.svn/: all-wcprops  entries
OldStuff/CPPRelatedStuff/students-samples/grp-3befa53a/: FicheCorrectionA.txt  saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-3befa53a/.svn/: all-wcprops  entries
OldStuff/CPPRelatedStuff/students-samples/grp-4152b0c9/: saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-4152b0c9/.svn/: all-wcprops  entries
OldStuff/CPPRelatedStuff/students-samples/grp-41b3e9c1/: FicheCorrectionA.txt
OldStuff/CPPRelatedStuff/students-samples/grp-41b3e9c1/.svn/: all-wcprops  entries
OldStuff/CPPRelatedStuff/students-samples/grp-41b5f24c/: FicheCorrectionA.txt
OldStuff/CPPRelatedStuff/students-samples/grp-41b5f24c/.svn/: all-wcprops  entries
OldStuff/CPPRelatedStuff/students-samples/grp-44b40ff9/.svn/: all-wcprops  entries
OldStuff/CPPRelatedStuff/students-samples/grp-45253833/: FicheCorrectionA.txt  saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-454e3907/: FicheCorrectionA.txt
OldStuff/CPPRelatedStuff/students-samples/grp-49a1879e/: FicheCorrectionA.txt  saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-4b260f8b/: saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-4c7fe850/: grp-4c7fe850.log~
OldStuff/CPPRelatedStuff/students-samples/grp-4ed4830b/: saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-4f747a1c/: saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-4f7f1cab/: saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-51d5c927/: saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-55f4a1c1/: FicheCorrectionA.txt
OldStuff/CPPRelatedStuff/students-samples/grp-5d9c1536/: saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-5ec2b99f/: FicheCorrectionA.txt  saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-64e2a1f0/: FicheCorrectionA.txt  saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-65305bde/: FicheCorrectionA.txt  saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-681876b9/: saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-6b122fb8/: FicheCorrectionA.txt  saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-6bbead3c/: FicheCorrectionA.txt
OldStuff/CPPRelatedStuff/students-samples/grp-6e16caaf/: FicheCorrectionA.txt  saut.cc
OldStuff/CPPRelatedStuff/students-samples/grp-b98f30b5/: FicheCorrectionA.txt  saut.cc
OldStuff/CPPStyleChecking/: cppcheck.version
OldStuff/CPPStyleChecking/SampleCode/: Sample1.cpp
OldStuff/CPPStyleChecking/mplayer/gui/.svn/: entries
OldStuff/JavaRelatedStuff/JavaSamples/: Interleave.java  InterleaveTest.java  Sample.java
OldStuff/JavaRelatedStuff/JavaSamples/Multiply/: Multiply.java  MultiplyTest.java
OldStuff/JavaRelatedStuff/checkstyle-5.6/: checkstylecompilation.properties
OldStuff/JavaRelatedStuff/pmd/: PMD Command.txt
OldStuff/UnitTesting/: CMakeLists.txt  FractionTest.h
StyleChecking/: styleChecker.py
Tools - Documents/: CuratorStudentGuide.doc
UnitTesting/: CMakeLists.txt  Fraction.cpp  Fraction.h  FractionTest.cpp  TestModules.cpp  UnitTesting.files  UnitTesting.includes
(+242 files in other folders)
